# reaper-theme-builder

./: .gitignore  build-theme-2.py  build-theme.py  formatter.py  macros.py  pyproject.toml  regex.txt  rptheme.py  rtconfig.py  scanner.py  theme.py  ziptest.py
lib/: formatter.py  macros.py  presetcolors.py  rptheme.py  rtconfig.py  scanner.py  theme.py
reaper_theme_builder/: __init__.py  __main__.py
reaper_theme_builder/lib/: formatter.py  rptheme.py  rtconfig.py  scanner.py  theme.py  utils.py
reaper_theme_builder/lib/val/: __init__.py  constants.py  evaluator.py  formatter.py  funcs.py
scripts/: reaper-code-to-color.py  reaper-reload.ahk  reaper-tweaker-tools.ahk
scripts/file-diff-watcher/: diff-watch.py  run.ps1
test/: My Theme.ReaperTheme  rtconfig.txt
test/Arrange/: rtconfig.txt
test/panels/: subitem.txt
test/panels/MCP/: rtconfig.txt
test/panels/TCP/: rtconfig.txt  tcp.ReaperTheme
test/panels/TCP/Layout A/: rtconfig.txt
