[tool.poetry]
name = "reaper-theme-builder"
version = "0.1.0"
description = ""
authors = ["James Walker <james.chunho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
simpleeval = "^0.9.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rtb = "reaper_theme_builder:main"
